tests/dataset/tpc-ds/compiler/c/q84.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:47Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:47Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int id;
  int current_addr;
  int cdemo;
  int hdemo;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ca_address_sk;
  const char *ca_city;
} customer_addres_t;
typedef struct {
  int len;
  customer_addres_t *data;
} customer_addres_list_t;
customer_addres_list_t create_customer_addres_list(int len) {
  customer_addres_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_addres_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cd_demo_sk;
} customer_demographic_t;
typedef struct {
  int len;
  customer_demographic_t *data;
} customer_demographic_list_t;
customer_demographic_list_t create_customer_demographic_list(int len) {
  customer_demographic_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_demographic_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int hd_demo_sk;
  int income_band_sk;
} household_demographic_t;
typedef struct {
  int len;
  household_demographic_t *data;
} household_demographic_list_t;
household_demographic_list_t create_household_demographic_list(int len) {
  household_demographic_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(household_demographic_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ib_income_band_sk;
  int ib_lower_bound;
  int ib_upper_bound;
} income_band_t;
typedef struct {
  int len;
  income_band_t *data;
} income_band_list_t;
income_band_list_t create_income_band_list(int len) {
  income_band_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(income_band_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int sr_cdemo_sk;
  double amt;
} store_return_t;
typedef struct {
  int len;
  store_return_t *data;
} store_return_list_t;
store_return_list_t create_store_return_list(int len) {
  store_return_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_return_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static double test_TPCDS_Q84_sample_result;
static void test_TPCDS_Q84_sample() {
  if (!(test_TPCDS_Q84_sample_result == 84.0)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  customer_t customer[] = {
      (customer_t){.id = 1, .current_addr = 1, .cdemo = 1, .hdemo = 1},
      (customer_t){.id = 2, .current_addr = 1, .cdemo = 2, .hdemo = 2},
      (customer_t){.id = 3, .current_addr = 1, .cdemo = 3, .hdemo = 1},
      (customer_t){.id = 4, .current_addr = 1, .cdemo = 4, .hdemo = 2}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  customer_addres_t customer_address[] = {
      (customer_addres_t){.ca_address_sk = 1, .ca_city = "Springfield"}};
  int customer_address_len =
      sizeof(customer_address) / sizeof(customer_address[0]);
  customer_demographic_t customer_demographics[] = {
      (customer_demographic_t){.cd_demo_sk = 1},
      (customer_demographic_t){.cd_demo_sk = 2},
      (customer_demographic_t){.cd_demo_sk = 3},
      (customer_demographic_t){.cd_demo_sk = 4}};
  int customer_demographics_len =
      sizeof(customer_demographics) / sizeof(customer_demographics[0]);
  household_demographic_t household_demographics[] = {
      (household_demographic_t){.hd_demo_sk = 1, .income_band_sk = 1},
      (household_demographic_t){.hd_demo_sk = 2, .income_band_sk = 1}};
  int household_demographics_len =
      sizeof(household_demographics) / sizeof(household_demographics[0]);
  income_band_t income_band[] = {(income_band_t){
      .ib_income_band_sk = 1, .ib_lower_bound = 0, .ib_upper_bound = 50000}};
  int income_band_len = sizeof(income_band) / sizeof(income_band[0]);
  store_return_t store_returns[] = {
      (store_return_t){.sr_cdemo_sk = 1, .amt = 10.0},
      (store_return_t){.sr_cdemo_sk = 2, .amt = 20.0},
      (store_return_t){.sr_cdemo_sk = 3, .amt = 30.0},
      (store_return_t){.sr_cdemo_sk = 4, .amt = 24.0}};
  int store_returns_len = sizeof(store_returns) / sizeof(store_returns[0]);
  list_float tmp1 = list_float_create(
      customer.len * customer_address.len * customer_demographics.len *
      store_returns.len * household_demographics.len * income_band.len);
  int tmp2 = 0;
  for (int tmp3 = 0; tmp3 < customer_len; tmp3++) {
    customer_t c = customer[tmp3];
    for (int tmp4 = 0; tmp4 < customer_address_len; tmp4++) {
      customer_addres_t ca = customer_address[tmp4];
      if (!(c.current_addr == ca.ca_address_sk &&
            ca.ca_city == "Springfield")) {
        continue;
      }
      for (int tmp5 = 0; tmp5 < customer_demographics_len; tmp5++) {
        customer_demographic_t cd = customer_demographics[tmp5];
        if (!(c.cdemo == cd.cd_demo_sk)) {
          continue;
        }
        for (int tmp6 = 0; tmp6 < store_returns_len; tmp6++) {
          store_return_t sr = store_returns[tmp6];
          if (!(cd.cd_demo_sk == sr.sr_cdemo_sk)) {
            continue;
          }
          for (int tmp7 = 0; tmp7 < household_demographics_len; tmp7++) {
            household_demographic_t hd = household_demographics[tmp7];
            if (!(c.hdemo == hd.hd_demo_sk)) {
              continue;
            }
            for (int tmp8 = 0; tmp8 < income_band_len; tmp8++) {
              income_band_t ib = income_band[tmp8];
              if (!(hd.income_band_sk == ib.ib_income_band_sk)) {
                continue;
              }
              tmp1.data[tmp2] = sr.amt;
              tmp2++;
            }
          }
        }
      }
    }
  }
  tmp1.len = tmp2;
  double result = _sum_float(tmp1);
  _json_float(result);
  test_TPCDS_Q84_sample_result = result;
  test_TPCDS_Q84_sample();
  return 0;
}
